--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Data files (not committed)
 data/
 *.csv
 *.zip
+
+# macOS system files
+.DS_Store
+
+# Python
+__pycache__/
+*.pyc
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Virtual environments
+.venv/
+env/
